Finishing off initial versions of CompBookB

--- a/notebooks-py/b-04-z-interval-dff-2-props.ipynb
+++ b/notebooks-py/b-04-z-interval-dff-2-props.ipynb
@@ -4,16 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Computer Book B, Activity 18\n",
+    "# Large-sample confidence intervals for a difference between proportions\n",
     "\n",
-    "Calculating large-sample confidence intervals for a **difference between proportions.**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Package import"
+    "**date**\n",
+    ": 2021-04-16\n",
+    "\n",
+    "**data**\n",
+    ": `skulls.csv`\n",
+    "\n",
+    "**ref**\n",
+    ": Computer book B, Activity 20\n",
+    "\n",
+    "**desc**\n",
+    ": Calculating large-sample confidence intervals for a **difference between proportions.**"
    ]
   },
   {
@@ -22,90 +25,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from scipy.stats import norm, bernoulli\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
+    "from scripts.data import Data\n",
+    "from statsmodels.stats.proportion import confint_proportions_2indep\n",
     "from math import sqrt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data import"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Column_1-T</th>\n",
-       "      <th>Never</th>\n",
-       "      <th>Occasionally</th>\n",
-       "      <th>Often</th>\n",
-       "      <th>Always</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Heart disease</td>\n",
-       "      <td>24</td>\n",
-       "      <td>35</td>\n",
-       "      <td>21</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>No heart disease</td>\n",
-       "      <td>1355</td>\n",
-       "      <td>603</td>\n",
-       "      <td>192</td>\n",
-       "      <td>224</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Column_1-T  Never  Occasionally  Often  Always\n",
-       "0     Heart disease     24            35     21      30\n",
-       "1  No heart disease   1355           603    192     224"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../data/snoring.csv\")\n",
-    "\n",
-    "# preview the data\n",
-    "df"
+    "sewer = Data.load_sewer()"
    ]
   },
   {
@@ -114,33 +45,33 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "Column_1-T      object\n",
-       "Never            int64\n",
-       "Occasionally     int64\n",
-       "Often            int64\n",
-       "Always           int64\n",
-       "dtype: object"
-      ]
+       "   Immunity    Age  Exposure  Children\n",
+       "0         0  41.43         2         2\n",
+       "1         0  51.79         2         2\n",
+       "2         1  41.12         2         2\n",
+       "3         1  29.95         3         2\n",
+       "4         1  40.78         2         2"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Immunity</th>\n      <th>Age</th>\n      <th>Exposure</th>\n      <th>Children</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>41.43</td>\n      <td>2</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>51.79</td>\n      <td>2</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>41.12</td>\n      <td>2</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>29.95</td>\n      <td>3</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>40.78</td>\n      <td>2</td>\n      <td>2</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
    "source": [
-    "df.dtypes"
+    "sewer.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data transformation\n",
+    "We want to estimate the difference between the proportion infected among sewerage workers without children and the proportion infected among sewerage workers with children, together with a 95% confidence interval for this difference.\n",
     "\n",
-    "The `DataFrame` is not partcularly useful for us at the moment, given its format.\n",
-    "Let us transform it so it is useful."
+    "We first collection the parameters by declaring and initialising a number of diffrent local variables"
    ]
   },
   {
@@ -149,72 +80,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# declare new DataFrames, one for each sample group\n",
-    "disease = df.query(\"`Column_1-T` == 'Heart disease'\").copy(deep=False)\n",
-    "no_disease = df.query(\"`Column_1-T` == 'No heart disease'\").copy(deep=False)\n",
+    "# get immunity & children, immunity=1, children=2\n",
+    "children = sewer.query('Immunity == 1 & Children == 2').count()[0]\n",
     "\n",
-    "# drop label columns\n",
-    "disease.drop(columns=\"Column_1-T\", inplace=True)\n",
-    "no_disease.drop(columns=\"Column_1-T\", inplace=True)"
+    "# get count children\n",
+    "size_children = sewer.query('Children == 2').count()[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Never</th>\n",
-       "      <th>Occasionally</th>\n",
-       "      <th>Often</th>\n",
-       "      <th>Always</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>24</td>\n",
-       "      <td>35</td>\n",
-       "      <td>21</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Never  Occasionally  Often  Always\n",
-       "0     24            35     21      30"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "disease"
+    "# get immune no children, immunity=1, children=1\n",
+    "no_children = sewer.query('Immunity == 1 & Children == 1').count()[0]\n",
+    "\n",
+    "# get count no children\n",
+    "size_no_children = sewer.query('Children == 1').count()[0]"
    ]
+  },
+  {
+   "source": [
+    "We can now calculate the difference between the two proportions."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -222,226 +113,62 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Never</th>\n",
-       "      <th>Occasionally</th>\n",
-       "      <th>Often</th>\n",
-       "      <th>Always</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1355</td>\n",
-       "      <td>603</td>\n",
-       "      <td>192</td>\n",
-       "      <td>224</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Never  Occasionally  Often  Always\n",
-       "1   1355           603    192     224"
+       "(0.1582197356059404, 0.38825404377923145)"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
    "source": [
-    "no_disease"
+    "confint_proportions_2indep(\n",
+    "    count1=children,\n",
+    "    nobs1=size_children,\n",
+    "    count2=no_children,\n",
+    "    nobs2=size_no_children,\n",
+    "    method=\"wald\"\n",
+    ")"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Estimating the difference between proportions\n",
-    "\n",
-    "> Estimate the difference between the proportion of people without heart disease who never snore and the proportion with heart disease who never snore.\n",
-    "\n",
-    "Note that we recast these new local variable using `float()`."
-   ]
+    "Note the default method is `Newcomb`, but this does not return the result expected in **M248.**"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
+   "source": [
+    "help(confint_proportions_2indep)"
+   ],
    "cell_type": "code",
+   "metadata": {},
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sample size n2\n",
-    "n1 = disease.sum(axis=1).at[0]  # returns Series, so get at idx\n",
-    "n1 = n1\n",
-    "\n",
-    "# proportion who never snore withheart disease\n",
-    "p1 = float(disease[\"Never\"]/disease.sum(axis=1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.21818181818181817"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Help on function confint_proportions_2indep in module statsmodels.stats.proportion:\n\nconfint_proportions_2indep(count1, nobs1, count2, nobs2, method=None, compare='diff', alpha=0.05, correction=True)\n    Confidence intervals for comparing two independent proportions\n    \n    This assumes that we have two independent binomial samples.\n    \n    Parameters\n    ----------\n    count1, nobs1 : float\n        Count and sample size for first sample.\n    count2, nobs2 : float\n        Count and sample size for the second sample.\n    method : str\n        Method for computing confidence interval. If method is None, then a\n        default method is used. The default might change as more methods are\n        added.\n    \n        diff:\n         - 'wald',\n         - 'agresti-caffo'\n         - 'newcomb' (default)\n         - 'score'\n    \n        ratio:\n         - 'log'\n         - 'log-adjusted' (default)\n         - 'score'\n    \n        odds-ratio:\n         - 'logit'\n         - 'logit-adjusted' (default)\n         - 'score'\n    \n    compare : string in ['diff', 'ratio' 'odds-ratio']\n        If compare is diff, then the confidence interval is for diff = p1 - p2.\n        If compare is ratio, then the confidence interval is for the risk ratio\n        defined by ratio = p1 / p2.\n        If compare is odds-ratio, then the confidence interval is for the\n        odds-ratio defined by or = p1 / (1 - p1) / (p2 / (1 - p2).\n    alpha : float\n        Significance level for the confidence interval, default is 0.05.\n        The nominal coverage probability is 1 - alpha.\n    \n    Returns\n    -------\n    low, upp\n    \n    Notes\n    -----\n    Status: experimental, API and defaults might still change.\n        more ``methods`` will be added.\n\n"
+     ]
     }
-   ],
-   "source": [
-    "p1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# sample size n2\n",
-    "n2 = no_disease.sum(axis=1).at[1]  # returns Series, so get at idx\n",
-    "\n",
-    "# proportion who never snore without heart disease\n",
-    "p2 = float(no_disease[\"Never\"]/no_disease.sum(axis=1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5707666385846673"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3525848204028491"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# the difference between the two proportions d\n",
-    "p2 - p1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Calculating a CI for the difference\n",
-    "\n",
-    "Note these are just **Bernoulli variable**, they either snore or they don't snore.\n",
-    "We declare `bernoulli` objects to make this link clearer."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# declare two bernoulli variables\n",
-    "b1 = bernoulli(p=p1)  # with heart disease\n",
-    "b2 = bernoulli(p=p2)  # with no heart hisease"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# calculate p(1-p)/n for each object\n",
-    "ese_b1 = b1.var()/n1\n",
-    "ese_b2 = b2.var()/n2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# estimated standard error\n",
-    "ese = sqrt(ese_b1 + ese_b2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.27287638968801975, 0.43229325111767847)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# approximate 95% CI using Normal(d, ese^2)\n",
-    "norm(loc=(p2-p1), scale=ese).interval(alpha=0.95)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python383jvsc74a57bd0ff1f241afc5a4c2e07811e38e6858495d05af165b3766e4314a3d7953c54c6af",
+   "display_name": "Python 3.8.3 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -454,6 +181,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "ff1f241afc5a4c2e07811e38e6858495d05af165b3766e4314a3d7953c54c6af"
+   }
   }
  },
  "nbformat": 4,
