--- a/notebooks-py/b-02-large-sample-ci.ipynb
+++ b/notebooks-py/b-02-large-sample-ci.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Large-sample confidence intervals\n",
+    "# Large-sample approximate confidence intervals for population means\n",
     "\n",
     "**date**\n",
     ": 2021-04-16\n",
@@ -12,12 +12,22 @@
     "**data**\n",
     ": `glass-fibres.csv`\n",
     "\n",
+    "**Module.function**\n",
+    ": `statsmodels.stats.weightstats.zconfint`\n",
+    "\n",
     "**ref**\n",
     ": Computer book B, Activity 15\n",
     "\n",
     "**desc**\n",
-    ": Calculate large-sample confidence intervals for a **population mean** from a sample of data"
+    ": Calculate large-sample confidence intervals of a population mean from a sample of data."
    ]
+  },
+  {
+   "source": [
+    "## Import the modules"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -25,10 +35,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scripts.data import Data\n",
-    "from statsmodels.stats.weightstats import zconfint\n",
-    "from math import sqrt"
+    "import src.load\n",
+    "from statsmodels.stats.weightstats import zconfint"
    ]
+  },
+  {
+   "source": [
+    "## Import the data and preview"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -37,13 +53,13 @@
    "outputs": [],
    "source": [
     "# load data\n",
-    "fibres = Data.load_glass_fibres()"
+    "sample = src.load.glass_fibres()"
    ]
   },
   {
    "source": [
     "# preview data\n",
-    "fibres.head()"
+    "sample.head()"
    ],
    "cell_type": "code",
    "metadata": {},
@@ -69,9 +85,9 @@
   },
   {
    "source": [
-    "We can use `statsmodels` to calculate confidence intervals.\n",
+    "## Calculate an approximate confidence interval\n",
     "\n",
-    "Declare local variables to help with clarity."
+    "Note that formal argument `alpha` should be the $\\alpha$ in $100(1-\\alpha)%$**% CI**."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -79,25 +95,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mean = fibres[\"Strength\"].mean()\n",
-    "std = fibres[\"Strength\"].std()\n",
-    "n = fibres[\"Strength\"].size\n",
-    "ste = std/sqrt(n)  # standard error"
-   ]
-  },
-  {
-   "source": [
-    "We can then used `zconfint()` to return a $z$-interval."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,19 +105,19 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 4
     }
    ],
    "source": [
     "zconfint(\n",
-    "    x1=fibres[\"Strength\"],\n",
-    "    alpha=0.1\n",
+    "    x1=sample[\"Strength\"],\n",
+    "    alpha=0.1   # 100(1-alpha)%\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,13 +131,6 @@
    "source": [
     "help(zconfint)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
