--- a/notebooks-py/b-04-z-interval-dff-2-props.ipynb
+++ b/notebooks-py/b-04-z-interval-dff-2-props.ipynb
@@ -12,12 +12,23 @@
     "**data**\n",
     ": `skulls.csv`\n",
     "\n",
+    "**Module.function**\n",
+    ": `statsmodels.stats.proportion.confint_proportions_2indep`\n",
+    "\n",
     "**ref**\n",
     ": Computer book B, Activity 20\n",
     "\n",
     "**desc**\n",
-    ": Calculating large-sample confidence intervals for a **difference between proportions.**"
+    ": Calculating large-sample confidence intervals for a difference between proportions.\n",
+    "There is some light data processing to gather the information needed to invoke the function."
    ]
+  },
+  {
+   "source": [
+    "## Import the modules"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -25,10 +36,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scripts.data import Data\n",
-    "from statsmodels.stats.proportion import confint_proportions_2indep\n",
-    "from math import sqrt"
+    "import src.load\n",
+    "from statsmodels.stats.proportion import confint_proportions_2indep"
    ]
+  },
+  {
+   "source": [
+    "## Import the data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -36,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sewer = Data.load_sewer()"
+    "sample = src.load.sewer()"
    ]
   },
   {
@@ -62,16 +79,18 @@
     }
    ],
    "source": [
-    "sewer.head()"
+    "sample.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Approximate confidence interval for the difference between two proportions\n",
+    "\n",
     "We want to estimate the difference between the proportion infected among sewerage workers without children and the proportion infected among sewerage workers with children, together with a 95% confidence interval for this difference.\n",
     "\n",
-    "We first collection the parameters by declaring and initialising a number of diffrent local variables"
+    "Declare and initialise a number of diffrent local variables."
    ]
   },
   {
@@ -81,10 +100,10 @@
    "outputs": [],
    "source": [
     "# get immunity & children, immunity=1, children=2\n",
-    "children = sewer.query('Immunity == 1 & Children == 2').count()[0]\n",
+    "children = sample.query('Immunity == 1 & Children == 2').count()[0]\n",
     "\n",
     "# get count children\n",
-    "size_children = sewer.query('Children == 2').count()[0]"
+    "size_children = sample.query('Children == 2').count()[0]"
    ]
   },
   {
@@ -94,15 +113,15 @@
    "outputs": [],
    "source": [
     "# get immune no children, immunity=1, children=1\n",
-    "no_children = sewer.query('Immunity == 1 & Children == 1').count()[0]\n",
+    "no_children = sample.query('Immunity == 1 & Children == 1').count()[0]\n",
     "\n",
     "# get count no children\n",
-    "size_no_children = sewer.query('Children == 1').count()[0]"
+    "size_no_children = sample.query('Children == 1').count()[0]"
    ]
   },
   {
    "source": [
-    "We can now calculate the difference between the two proportions."
+    "Note the default actual argument for formal agument `method` is `newcomb`, but this does not return the result expected in **M248.**"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -135,13 +154,6 @@
   },
   {
    "source": [
-    "Note the default method is `Newcomb`, but this does not return the result expected in **M248.**"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
     "help(confint_proportions_2indep)"
    ],
    "cell_type": "code",
@@ -156,13 +168,6 @@
      ]
     }
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
