--- a/notebooks-py/b-07-z-test-two-tail.ipynb
+++ b/notebooks-py/b-07-z-test-two-tail.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hypthesis test: a two-sided $z$-test\n",
+    "# Two-sided $z$-test\n",
     "\n",
     "**date**\n",
     ": 2021-04-17\n",
@@ -12,12 +12,22 @@
     "**data**\n",
     ": `practical-test.csv`\n",
     "\n",
+    "**module**\n",
+    ": `statsmodels.stats.weightstats.ztest`\n",
+    "\n",
     "**ref**\n",
     ": Computer book B, Activity 23\n",
     "\n",
     "**desc**\n",
-    ": Performing a two-sided $z$-**test of a population mean**"
+    ": Performing a two-sided $z$-test of a population mean."
    ]
+  },
+  {
+   "source": [
+    "## Import the modules"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -25,9 +35,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scripts.data import Data\n",
+    "import src.load\n",
     "from statsmodels.stats.weightstats import ztest"
    ]
+  },
+  {
+   "source": [
+    "## Import the data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -35,21 +52,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "practical = Data.load_practical_test()"
+    "sample = src.load.practical_test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                  Centre  Male  Female  Total\n",
+       "0         Aberdeen North  49.9    41.7   45.6\n",
+       "1  Aberdeen South (Cove)  50.9    43.9   47.2\n",
+       "2            Abergavenny  60.5    53.5   56.8\n",
+       "3            Aberystwyth  62.5    53.2   57.7\n",
+       "4                Airdrie  47.2    38.9   42.7"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Centre</th>\n      <th>Male</th>\n      <th>Female</th>\n      <th>Total</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Aberdeen North</td>\n      <td>49.9</td>\n      <td>41.7</td>\n      <td>45.6</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Aberdeen South (Cove)</td>\n      <td>50.9</td>\n      <td>43.9</td>\n      <td>47.2</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Abergavenny</td>\n      <td>60.5</td>\n      <td>53.5</td>\n      <td>56.8</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Aberystwyth</td>\n      <td>62.5</td>\n      <td>53.2</td>\n      <td>57.7</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Airdrie</td>\n      <td>47.2</td>\n      <td>38.9</td>\n      <td>42.7</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "sample.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# declare two local vars for easier coding\n",
+    "total = sample[\"Total\"]"
    ]
   },
   {
    "source": [
+    "## Scenario\n",
+    "\n",
     "The sample contains the pass rates for 316 UK driving practical test centres over the period April 2014 to March 2015.\n",
     "The first column (`Centre`) lists the 316 test centres; the second and third columns (`Male` and `Female`) contain the pass rates (%) for males and females, respectively, at each centre; and the fourth column (`Total`) contains the overall pass rates (%) for each centre.\n",
     "\n",
-    "During the period April 2013 to March 2014, the national driving practical test pass rate was 47.1%."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
+    "During the period April 2013 to March 2014, the national driving practical test pass rate was 47.1%.\n",
+    "\n",
+    "## Hyotheses\n",
+    "\n",
     "Let the hypotheses be\n",
     "\n",
     "$$\n",
@@ -65,49 +117,36 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# declare two local vars for easier coding\n",
-    "total = practical[\"Total\"]"
-   ]
+    "## Method\n",
+    "\n",
+    "We will use `statsmodels.stats.weightstats.ztest` to help with this analysis.\n",
+    "\n",
+    "## Analysis"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "count    316.000000\n",
-       "mean      49.630380\n",
-       "std        7.165444\n",
-       "min       30.300000\n",
-       "25%       44.975000\n",
-       "50%       49.650000\n",
-       "75%       54.500000\n",
-       "max       71.300000\n",
-       "Name: Total, dtype: float64"
+       "49.630379746835445"
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 7
     }
    ],
    "source": [
-    "total.describe()"
+    "# get sample mean\n",
+    "total.mean()"
    ]
-  },
-  {
-   "source": [
-    "We will use `statsmodels.stats.weightstats.ztest` to help with this analysis."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -135,6 +174,8 @@
   },
   {
    "source": [
+    "## Discussion\n",
+    "\n",
     "Since $p <$ 0.01, there is strong evidence against the null hypothesis that the mean pass rate for the driving practical test nationally from April 2014 to March 2015 is the same as the national pass rate over the same period in the previous year.\n",
     "\n",
     "Further, since $z \\simeq$ 6.28, is positive, or equivalently because the sample mean, 49.629, is greater than the hypothesised population mean 47.1, the test suggests that the mean pass rate nationally over the period April 2014 to March 2015 is higher than the national pass rate over the same period in the previous year."
@@ -158,13 +199,6 @@
    "source": [
     "help(ztest)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
