rolling sync again

--- a/notebooks-py/b-08-t-test-one-tail.ipynb
+++ b/notebooks-py/b-08-t-test-one-tail.ipynb
@@ -4,13 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hypthesis test: a one-sided $t$-test\n",
+    "# One-sided $t$-test\n",
     "\n",
     "**date**\n",
     ": 2021-04-17\n",
     "\n",
     "**data**\n",
     ": N/A\n",
+    "\n",
+    "**data**\n",
+    ": `scipy.stats.t`\n",
     "\n",
     "**ref**\n",
     ": Computer book B, Activity 24\n",
@@ -31,6 +34,8 @@
   },
   {
    "source": [
+    "## Hypotheses\n",
+    "\n",
     "Let the hypotheses be\n",
     "\n",
     "$$\n",
@@ -42,11 +47,17 @@
     "\n",
     "where $\\mu_{S}$ is the mean systolic blood pressure (BP) for menopausal women after taking 22g of freeze-dried blueberry powder every day for 8 weeks.\n",
     "\n",
-    "We have been the following paramaters:\n",
+    "## Method\n",
+    "\n",
+    "The question supplied us with the following ket bits of information\n",
     "\n",
     "- sample size $n=20$\n",
     "- sample mean $\\overline{X}_{S} = 131\\> \\text{mm Hg}$\n",
     "- sample standard deviation $S_{S} = 17\\> \\text{mm Hg}$\n",
+    "\n",
+    "We will use `scipy.stats.t` to calculate the test statistic and $p$-value.\n",
+    "\n",
+    "## Analysis\n",
     "\n",
     "Declare local variables to hold the data."
    ],
@@ -85,7 +96,7 @@
   },
   {
    "source": [
-    "And so the test statistic and $p$-values are"
+    "And so the test statistic is..."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -109,6 +120,13 @@
    "source": [
     "t_stat"
    ]
+  },
+  {
+   "source": [
+    "And $p$-values is..."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
