--- a/notebooks-py/b-11-z-test-prop.ipynb
+++ b/notebooks-py/b-11-z-test-prop.ipynb
@@ -12,6 +12,9 @@
     "**data**\n",
     ": `NA`\n",
     "\n",
+    "**module**\n",
+    ": `statsmodels.stats.proportion.proportions_ztest`\n",
+    "\n",
     "**ref**\n",
     ": Computer book B, Activity 26\n",
     "\n",
@@ -30,8 +33,10 @@
   },
   {
    "source": [
+    "## Introduction\n",
+    "\n",
     "Data from the Labour Force Survey published in January 2014 by the UK’s Office for\n",
-    "National Statistics showed that the proportion of young people surveyed $p_{W}$ aged between 20 and 34 years living with their parents in Wales was $\\frac{68}{254}$.\n",
+    "National Statistics showed that the proportion of young people surveyed $p_{W}$ aged between 20 and 34 years living with their parents in Wales was $68/254$.\n",
     "\n",
     "Let the hypotheses be\n",
     "\n",
@@ -39,14 +44,18 @@
     "H_{0} : p_{W} = 0.25, \\hspace{3mm} H_{1} : p_{W} \\neq 0.25.\n",
     "$$\n",
     "\n",
-    "Perform the hypothesis test using `statsmodels.stats.proportion.proportions_ztest`"
+    "## Method\n",
+    "\n",
+    "Perform the hypothesis test using `statsmodels.stats.proportion.proportions_ztest`\n",
+    "\n",
+    "## Analysis"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +66,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 2
     }
    ],
    "source": [
@@ -72,14 +81,18 @@
   {
    "source": [
     "Note that **M248** specifies we should use the variance of $p_{0}$ as the **ESE**.\n",
-    "This is why we pass $p_{0}$ as an actual argment for `prop_var`."
+    "This is why we pass $p_{0}$ as an actual argment for `prop_var`.\n",
+    "\n",
+    "## Discussion\n",
+    "\n",
+    "**N/A**"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
