--- a/notebooks-py/b-09-t-test-paired-1.ipynb
+++ b/notebooks-py/b-09-t-test-paired-1.ipynb
@@ -12,6 +12,9 @@
     "**data**\n",
     ": `darwin.csv`\n",
     "\n",
+    "**module**\n",
+    ": `scipy.stats.ttest_1samp`\n",
+    "\n",
     "**ref**\n",
     ": Computer book B, Activity 25(a)\n",
     "\n",
@@ -20,16 +23,29 @@
    ]
   },
   {
+   "source": [
+    "## Import the modules"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scripts.data import Data\n",
-    "from scipy.stats import t, probplot, ttest_1samp\n",
-    "import matplotlib.pyplot as plt\n",
-    "from math import sqrt"
+    "import src.load\n",
+    "from scipy.stats import probplot, ttest_1samp\n",
+    "import matplotlib.pyplot as plt"
    ]
+  },
+  {
+   "source": [
+    "## Import the data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -37,12 +53,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "darwin = Data.load_darwin()"
+    "sample = src.load.darwin()"
    ]
   },
   {
    "source": [
-    "darwin.head()"
+    "sample.head()"
    ],
    "cell_type": "code",
    "metadata": {},
@@ -68,15 +84,12 @@
   },
   {
    "source": [
+    "## Introduction\n",
+    "\n",
     "Charles Darwin, one of the people who introduced the theory of evolution, measured the heights of fifteen pairs of plants of the species Zea mays, that is, maize or corn. Each plant had parents grown from the same seed – one plant in each pair was the offspring of a cross-fertilisation, the other of a self-fertilisation.\n",
     "The key feature of these data is that the two height measurements within each pair are not independent, since the two plants within a pair are genetically related.\n",
-    "For each pair, the difference between the heights of the plants can be found."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
+    "For each pair, the difference between the heights of the plants can be found.\n",
+    "\n",
     "Let the hypotheses be\n",
     "\n",
     "$$\n",
@@ -90,6 +103,8 @@
   },
   {
    "source": [
+    "## Process the data\n",
+    "\n",
     "Add a column to the `DataFrame` that contains the difference between `Cross` and `Self`."
    ],
    "cell_type": "markdown",
@@ -131,13 +146,6 @@
    ]
   },
   {
-   "source": [
-    "Check that `Diff` can be modelled using a normal distribution."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -146,6 +154,13 @@
     "# reference to the Diff col\n",
     "diff = darwin[\"Diff\"]"
    ]
+  },
+  {
+   "source": [
+    "## Check for normality"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -176,6 +191,8 @@
   {
    "source": [
     "The normal probability plot suggests that an assumption of normality is plausible.\n",
+    "\n",
+    "## Analysis\n",
     "\n",
     "Perform the hypothesis test using `scipy.stats.ttest_1samp`"
    ],
@@ -210,6 +227,8 @@
    "source": [
     "Therefore $t \\simeq 2.148, \\> p \\simeq 0.0479$.\n",
     "\n",
+    "## Discussion\n",
+    "\n",
     "Since $p \\in$ (0.01, 0.05], there is moderate evidence against the null hypothesis that the plants differ in mean height.\n",
     "Indeed, since the $\\overline{X}_{D} \\simeq$ 20.93, the data suggest that cross-fertilised plants are taller on average than self-fertilised plants."
    ],
@@ -232,13 +251,6 @@
    "source": [
     "help(ttest_1samp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
