--- a/notebooks-py/b-10-t-test-paired-2.ipynb
+++ b/notebooks-py/b-10-t-test-paired-2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hypthesis test: a paired two-sample $t$-test\n",
+    "# Paired two-sample $t$-test\n",
     "\n",
     "**date**\n",
     ": 2021-04-17\n",
@@ -12,27 +12,44 @@
     "**data**\n",
     ": `darwin.csv`\n",
     "\n",
+    "**module**\n",
+    ": `scipy.stats.ttest_rel`\n",
+    "\n",
     "**ref**\n",
     ": Computer book B, Activity 25(b)\n",
     "\n",
     "**desc**\n",
     ": Performing a **paired two-sample** $t$-**test** where the difference between two samples is *not* calculated.\n",
     "\n",
-    "This is a follow-up activity to `b-09-t-test-paired-1.ipynb`.\n",
-    "The method to achive the result is different, but the result is the same.\n",
+    "**note**\n",
+    ": This is a follow-up activity to `b-09-t-test-paired-1.ipynb`.\n",
+    "The alogirthm to achieve the result is different, but the result is the same.\n",
     "Please see that notebook for additional commentary."
    ]
   },
   {
+   "source": [
+    "## Import the modules"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scripts.data import Data\n",
-    "from scipy.stats import ttest_rel\n",
-    "from statsmodels.stats.weightstats import CompareMeans"
+    "import src.load\n",
+    "from scipy.stats import ttest_rel"
    ]
+  },
+  {
+   "source": [
+    "## Import the modules"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -40,11 +57,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "darwin = Data.load_darwin()"
+    "sample = src.load.darwin()"
    ]
   },
   {
    "source": [
+    "## Hypotheses\n",
+    "\n",
     "Let the hypotheses be\n",
     "\n",
     "$$\n",
@@ -53,6 +72,8 @@
     "\n",
     "where $\\mu_{D}$ is the mean difference between the heights of paired plants.\n",
     "\n",
+    "## Analysis\n",
+    "\n",
     "Perform the hypothesis test using `scipy.stats.ttest_rel`"
    ],
    "cell_type": "markdown",
@@ -60,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,19 +92,28 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 3
     }
    ],
    "source": [
     "ttest_rel(\n",
-    "    a=darwin[\"Cross\"],\n",
-    "    b=darwin[\"Self\"]\n",
+    "    a=sample[\"Cross\"],\n",
+    "    b=sample[\"Self\"]\n",
     ")"
    ]
   },
   {
+   "source": [
+    "## Discussion\n",
+    "\n",
+    "**See other notebook.**"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
