--- a/notebooks-py/b-11-z-test-prop.ipynb
+++ b/notebooks-py/b-11-z-test-prop.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hypthesis test: a $z$-test of a population proportion\n",
+    "# $z$-test of a population proportion\n",
     "\n",
     "**date**\n",
     ": 2021-04-17\n",
